tests/expectations/compiler/structs/external_program_submodule_unknown_fail.out
Error [ETYC0372017]: The type `child.aleo::ghost::Point` is not found in the current scope.
    --> compiler-test:7:17
     |
   7 |     fn bad_type(p: child.aleo::ghost::Point) -> u32 {
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::ghost::Point` is not found in the current scope.
    --> compiler-test:8:16
     |
   8 |         return p.x + p.y;
     |                ^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::ghost::Point` is not found in the current scope.
    --> compiler-test:8:22
     |
   8 |         return p.x + p.y;
     |                      ^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
